# learnwayland

./: .clang-format  01-list-globals.c  03-shm-buffer-resize-no-realloc.c  04-shm-buffer-resize-realloc.c  05-pixman.c  06-cairo.c  README.md  decorations.c  list-globals.c  meson.build  shm-resizable.c
01-basic-window/: Makefile  main.c
02-toplevel-events/: Makefile  app.c  app.h  main.c
03-animation/: Makefile  buffer.c  buffer.h  display.c  display.h  input.h  main.c  window.c  window.h
04-gl/: Makefile  display.c  display.h  input.h  main.c  window.c  window.h
05-egl-minimal/: Makefile  init_window.c
06-subsurfaces/: Makefile  buffer.h  display.c  window.c
animation/: display.c  meson.build  window.c
app-structure/: app.c  app.h  main.c
basic-window/: main.c  meson.build
cairo/: main.c  meson.build
common/: log.c  log.h  shm.c
gl/: display.c  main.c  meson.build  window.c
gl-single-file/: main.c  meson.build
list-globals/: main.c  meson.build
pixman/: main.c  meson.build
protocols/: Makefile
shm-buffer-resize-no-realloc/: main.c
shm-buffer-resize-realloc/: main.c
single-pixel-with-decorations/: main.c  meson.build
subsurfaces/: display.c  display.h  input.c  window.c  window.h
subsurfaces-1pixel/: app.c  app.h  main.c  meson.build
toplevel-events/: app.c  main.c
wlr-layers/: main.c
